bk_ida/gccida/g1/if_convert
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3233:4: error: expected ';' after expression
rtx end; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3233:5: error: use of undeclared identifier 'end'
rtx end; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3235:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3235:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3240:4: error: expected ';' after expression
rtx cond_earliest; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3240:5: error: use of undeclared identifier 'cond_earliest'
rtx cond_earliest; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3241:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3241:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3243:4: error: expected ';' after expression
rtx alt_condition; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3243:5: error: use of undeclared identifier 'alt_condition'; did you mean 'get_condition'?
rtx alt_condition; // rax 
    ^~~~~~~~~~~~~
    get_condition
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/expr.h:337:12: note: 'get_condition' declared here
extern rtx get_condition PARAMS ((rtx, rtx *));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3251:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3251:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3253:4: error: expected ';' after expression
rtx i; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3253:5: error: use of undeclared identifier 'i'
rtx i; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3254:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3254:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3256:4: error: expected ';' after expression
rtx v40; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3256:5: error: use of undeclared identifier 'v40'
rtx v40; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/ifcvt.c:3257:4: error: expected ';' after expression
rtx v41; // rax 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/if_convert/src/obj/ifcvt.o] Error 1
